# NIDS-CL

./: .gitignore  README.md  Run_4GB_EWCBaseline.txt  check_labels.py  count_original_distribution.py  count_stratified_distribution.py  main.py  model.py  preprocess.py  pyproject.toml  results_NF+Malaya_Run1_4GB_128KB.txt  results_NF+Malaya_Run1_4GB_1MB.txt  results_NF+Malaya_Run1_4GB_256KB.txt  results_NF+Malaya_Run1_4GB_2MB.txt  results_NF+Malaya_Run1_4GB_4MB.txt  results_NF+Malaya_Run1_4GB_512KB.txt  stratify_visual_evidence.py  train_ewc.py  train_naivereplay_weight.py  train_replay.py  train_replay_balancedweight_sklearnCM.py  train_replay_imbalancev1.py  train_single_task.py  training_log.txt  training_log_replay.txt  training_log_replay_balanced_optimized.txt  training_log_replay_weighted.txt  utils.py
Data Gathering Code/: bridge_malaya_to_nfv2.py  check_appmalaya_features.py  check_features NFv2.py  sample_and_check_malaya.py
NF + Malaya Train/: Train1Malaya.py  Train2Malaya.py  Train3Malaya.py  Train4Malaya.py  Train5Malaya.py  Train6malaya.py  Train7malaya.py  Train8malaya.py  model.py  utils.py
NF-UNIQ-IDS-v2 Train/: results_run1_4GB_128KB.txt  results_run1_4GB_1MB.txt  results_run1_4GB_256KB.txt  results_run1_4GB_2MB.txt  results_run1_4GB_4MB.txt  results_run1_4GB_512KB.txt  results_run1_4GB_EWCBaseline.txt  results_run1_4GB_NaiveBaseline.txt  train1.py  train2.py  train3.py  train4.py  train5.py  train6.py  train7.py  train8.py  train9.py
Preprocess Data Code/: make_cl_benchmark_data.py  make_cl_benchmark_datawithmalaya.py
(+6 files in other folders)
