[project]
name = "nids-cl"
version = "0.1.0"
description = "NIDS Continual Learning with Avalanche"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "avalanche-lib>=0.6.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,!=2.4.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "torch>=2.4.0", 
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "wandb",
]

# --- Force NVIDIA GPU Versions ---

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
